# django-procrastinate

./: .gitignore  LICENSE  README.md  pyproject.toml
core/: models.py  tasks.py  views.py
core/management/commands/: generate_customers.py
core/migrations/: 0001_initial.py
project/: settings.py
templates/: index.html
